RELEASE new Native-SDK version (#27)