@@ -1,15 +1,12 @@
-import java.time.LocalDate
+import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
     id 'idea'
     id 'java-library'
-    id 'maven-publish'
-    id 'org.jreleaser' version '1.13.1'
-    id 'jacoco'
 }
 
 group 'com.snowflake'
-version '2.1.1-SNAPSHOT'
+version '2.2.1-SNAPSHOT'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_11
@@ -20,25 +17,31 @@ java {
 }
 
 repositories {
-    def artifactoryUrl = System.getenv('MAVEN_ARTIFACTORY_URL')
-    artifactoryUrl != null
-        ? maven { url artifactoryUrl }
-        : mavenCentral()
-
+    mavenCentral()
     mavenLocal()
 }
 
 dependencies {
-    compileOnlyApi 'com.snowflake:snowpark:1.11.0'
-    compileOnlyApi 'com.snowflake:telemetry:0.0.1'
+    compileOnlyApi 'com.snowflake:snowpark:1.14.0'
+    compileOnlyApi 'com.snowflake:telemetry:0.1.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
-    testImplementation 'org.mockito:mockito-core:5.12.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
-    testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
     testImplementation project(':connectors-native-sdk-test')
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.11.3'
+    testImplementation 'org.mockito:mockito-core:5.14.2'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
+    testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
+}
+
+processResources {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    from(sourceSets.main.resources.srcDirs) {
+        filter(ReplaceTokens, tokens: [
+            snowpark: 'com.snowflake:snowpark:1.14.0',
+            java_jar: '/connectors-native-sdk.jar',
+            telemetry: 'com.snowflake:telemetry:0.1.0'
+        ])
+    }
 }
 
 sourceSets {
@@ -62,6 +65,12 @@ sourceSets {
         runtimeClasspath += sourceSets.main.output
         runtimeClasspath += sourceSets.testFixtures.output
     }
+    benchmark {
+        compileClasspath += sourceSets.main.output
+        compileClasspath += sourceSets.testFixtures.output
+        runtimeClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.testFixtures.output
+    }
 }
 
 idea {
@@ -77,6 +86,9 @@ idea {
 
         testSources.from(sourceSets.upgradeTest.java.srcDirs)
         testResources.from(sourceSets.upgradeTest.resources.srcDirs)
+
+        testSources.from(sourceSets.benchmark.java.srcDirs)
+        testResources.from(sourceSets.benchmark.resources.srcDirs)
     }
 }
 
@@ -94,50 +106,31 @@ configurations {
 
     upgradeTestImplementation.extendsFrom testImplementation
     upgradeTestRuntimeOnly.extendsFrom runtimeOnly
+
+    benchmarkImplementation.extendsFrom testImplementation
+    benchmarkRuntimeOnly.extendsFrom runtimeOnly
 }
 
 javadoc {
-    def taskOptions = options as StandardJavadocDocletOptions
-
-    taskOptions.addBooleanOption('-allow-script-in-comments', true)
-    taskOptions.setDocTitle("Snowflake Native SDK for Connectors - Java API Reference (${project.version})")
-    taskOptions.setWindowTitle("Snowflake Native SDK for Connectors - Java API Reference (${project.version})")
-    taskOptions.setLinks([
-        'https://docs.oracle.com/en/java/javase/11/docs/api/',
-        'https://docs.snowflake.com/developer-guide/snowpark/reference/java/',
-        'https://www.javadoc.io/doc/com.fasterxml.jackson.core/jackson-databind/latest/'
-    ])
-
-    taskOptions.setHeader("""
-        <div style="margin-top: 14px"><strong>
-          Snowflake Native SDK for Connectors - Java API Reference (${project.version}) <br/>
-          <a style="text-transform: none" href="https://docs.snowflake.com/en/developer-guide/native-apps/connector-sdk/about-connector-sdk" target="_top">[About the Snowflake Native SDK for Connectors]</a>
-        </strong></div>
-    """)
-
-    taskOptions.setBottom("""
-        &#169; ${LocalDate.now().year} Snowflake Inc. All Rights Reserved
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-00K70YK8HQ"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'G-00K70YK8HQ');
-        </script>
-
-        <script>
-        if (typeof useModuleDirectories !== 'undefined') {
-          useModuleDirectories = false;
-        }
-        </script>
-    """)
+    options {
+        links(
+            'https://docs.oracle.com/en/java/javase/11/docs/api/',
+            'https://docs.snowflake.com/developer-guide/snowpark/reference/java/',
+            'https://www.javadoc.io/doc/com.fasterxml.jackson.core/jackson-databind/2.13.4/index.html'
+        )
+    }
 }
 
 test {
+    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
+    systemProperties = [
+        'junit.jupiter.execution.parallel.enabled': true,
+        'junit.jupiter.execution.parallel.mode.default': 'SAME_THREAD',
+        'junit.jupiter.execution.parallel.mode.classes.default': 'CONCURRENT',
+        'junit.jupiter.execution.parallel.config.strategy': 'DYNAMIC'
+    ]
+
     useJUnitPlatform()
-    finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
 tasks.register('intTest', Test) {
@@ -147,11 +140,18 @@ tasks.register('intTest', Test) {
     testClassesDirs = sourceSets.intTest.output.classesDirs
     classpath = sourceSets.intTest.runtimeClasspath
 
-    systemProperty 'snowflakeCredentials', System.getProperty(
-        'snowflakeCredentials',
-        '../.env/snowflake_credentials'
-    )
+    systemProperties = [
+        'junit.jupiter.execution.parallel.enabled': true,
+        'junit.jupiter.execution.parallel.mode.default': 'SAME_THREAD',
+        'junit.jupiter.execution.parallel.mode.classes.default': 'CONCURRENT',
+        'junit.jupiter.execution.parallel.config.strategy': 'DYNAMIC',
+        'configurationFile': System.getProperty('configurationFile', '../deployment/snowflake.toml'),
+        'snowpark': System.getProperty('snowpark', 'com.snowflake:snowpark:1.14.0'),
+        'java_jar': System.getProperty('java_jar', '/connectors-native-sdk.jar'),
+        'telemetry': System.getProperty('telemetry', 'com.snowflake:telemetry:0.1.0'),
+    ]
 
+    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
     useJUnitPlatform()
 }
 
@@ -162,11 +162,18 @@ tasks.register('appTest', Test) {
     testClassesDirs = sourceSets.appTest.output.classesDirs
     classpath = sourceSets.appTest.runtimeClasspath
 
-    systemProperty 'snowflakeCredentials', System.getProperty(
-        'snowflakeCredentials',
-        '../.env/snowflake_credentials'
-    )
+    systemProperties = [
+        'junit.jupiter.execution.parallel.enabled': true,
+        'junit.jupiter.execution.parallel.mode.default': 'SAME_THREAD',
+        'junit.jupiter.execution.parallel.mode.classes.default': 'CONCURRENT',
+        'junit.jupiter.execution.parallel.config.strategy': 'DYNAMIC',
+        'configurationFile': System.getProperty(
+            'configurationFile',
+            '../deployment/snowflake.toml'
+        )
+    ]
 
+    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
     useJUnitPlatform()
 }
 
@@ -177,108 +184,33 @@ tasks.register('upgradeTest', Test) {
     testClassesDirs = sourceSets.upgradeTest.output.classesDirs
     classpath = sourceSets.upgradeTest.runtimeClasspath
 
-    systemProperty 'snowflakeCredentials', System.getProperty(
-        'snowflakeCredentials',
-        '../.env/snowflake_credentials'
-    )
+    systemProperties = [
+        'junit.jupiter.execution.parallel.enabled': true,
+        'junit.jupiter.execution.parallel.mode.default': 'SAME_THREAD',
+        'junit.jupiter.execution.parallel.mode.classes.default': 'CONCURRENT',
+        'junit.jupiter.execution.parallel.config.strategy': 'DYNAMIC',
+        'configurationFile': System.getProperty(
+            'configurationFile',
+            '../deployment/snowflake.toml'
+        )
+    ]
 
+    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
     useJUnitPlatform()
 }
 
-jacocoTestReport {
-    dependsOn test // tests are required to run before generating the report
-    reports {
-        xml.required = true
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-    }
-}
+tasks.register('benchmarkTest', Test) {
+    description = 'Runs benchmarks in application.'
+    group = 'verification'
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            pom {
-                name = 'Snowflake Native SDK for Connectors'
-                description = 'Library providing universal components that can be used to build a Snowflake Native App that ingests data from an external source into Snowflake'
-                url = 'https://www.snowflake.com/'
-                packaging = 'jar'
+    testClassesDirs = sourceSets.benchmark.output.classesDirs
+    classpath = sourceSets.benchmark.runtimeClasspath
 
-                licenses {
-                    license {
-                        name = 'The Apache License, Version 2.0'
-                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
+    systemProperty 'configurationFile', System.getProperty(
+        'configurationFile',
+        '../deployment/snowflake.toml',
+    )
 
-                developers {
-                    developer {
-                        name = 'Snowflake Support Team'
-                        email = 'snowflake-java@snowflake.net'
-                        organization = 'Snowflake Computing'
-                        organizationUrl = 'https://www.snowflake.com/'
-                    }
-                }
-
-                scm {
-                    url = 'https://github.com/snowflakedb/connectors-native-sdk/tree/main'
-                    connection = 'scm:git:git://github.com/snowflakedb/connectors-native-sdk'
-                    developerConnection = 'scm:git:ssh://github.com/snowflakedb/connectors-native-sdk'
-                }
-            }
-
-            from components.java
-        }
-    }
-
-    repositories {
-        maven {
-            def publishToCentral = System.getenv('publish') == 'true'
-            def isSnapshot = project.version.endsWith('-SNAPSHOT')
-
-            if (publishToCentral) {
-                if (isSnapshot) {
-                    throw new RuntimeException('Snapshot artifacts cannot be published to Maven Central')
-                }
-
-                url = layout.buildDirectory.dir('mvn-central-staging')
-            } else {
-                def repository = isSnapshot ? 'snapshots' : 'releases'
-                url = "${System.getenv('INTERNAL_NEXUS_URL')}/maven-$repository/"
-
-                credentials {
-                    username = System.getenv('INTERNAL_NEXUS_USERNAME')
-                    password = System.getenv('INTERNAL_NEXUS_PASSWORD')
-                }
-            }
-        }
-    }
-}
-
-jreleaser {
-    gitRootSearch = true
-
-    project {
-        description = 'Snowflake Native SDK for Connectors'
-        copyright = '2024 Snowflake Inc.'
-    }
-
-    signing {
-        active = 'ALWAYS'
-        armored = true
-        verify = false
-    }
-
-    deploy {
-        maven {
-            nexus2 {
-                'mvn-central' {
-                    active = 'RELEASE'
-                    url = 'https://oss.sonatype.org/service/local'
-                    applyMavenCentralRules = true
-                    closeRepository = true
-                    releaseRepository = true
-                    stagingRepository('build/mvn-central-staging')
-                }
-            }
-        }
-    }
+    jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
+    useJUnitPlatform()
 }
